--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -17,11 +17,18 @@
 
 <div class="nav-placeholder">
     <nav class="navbar navbar-inverse navbar-fixed-top">
+
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">Django Repository</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
         </div>
-        <div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url "post_list" %}">Home</a></li>
             <li><a href="{% url "python" %}" class="top-menu">Python</a></li>
@@ -29,10 +36,81 @@
             <li><a href="#">Git & GitHub</a></li>
             <li><a href="#">Daily life</a></li>
             <li><a href="#">Contact</a></li>
+            <li>
+                <div class="bs-example">
+
+                        <button type="button" class="btn btn-default btn-sm" data-target="#signup" data-toggle="modal">Sign up</button>
+                        <button type="button" class="btn btn-default btn-sm" data-target="#login" data-toggle="modal">Log in</button>
+
+                </div>
+            </li>
+
           </ul>
         </div>
+
       </div>
     </nav>
+    <div class="modal fade" id="signup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Sign up</h4>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label class="control-label">User Name:</label>
+                <input type="text" class="form-control">
+              </div>
+              <div class="form-group">
+                <label class="control-label">Password:</label>
+                  <input type="text" class="form-control">
+              </div>
+              <div class="form-group">
+                <label class="control-label">Re-Enter Password:</label>
+                  <input type="text" class="form-control">
+              </div>
+              <div class="form-group">
+                <label class="control-label">Email:</label>
+                  <input type="text" class="form-control">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Log in</h4>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label class="control-label">User Name:</label>
+                <input type="text" class="form-control">
+              </div>
+              <div class="form-group">
+                <label class="control-label">Password:</label>
+                  <input type="text" class="form-control">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary">Login</button>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
 
 
@@ -52,7 +130,6 @@
            </div>
        </div>
    </div>
-
   <div class="row">
 
       {% block content %}
