--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -6,10 +6,13 @@
 	<script src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
 	<script src="{% static 'js/jquery.scrollTo.min.js' %}"></script>
 	<script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/jQuery.loadScroll.js' %}"></script>
 	<script src="{% static 'js/myjs.js' %}"></script>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
+
+
 	<title>Welcome to My P-D-G setup guide</title>
 </head>
 
@@ -17,7 +20,6 @@
 
 <div class="nav-placeholder">
     <nav class="navbar navbar-inverse navbar-fixed-top">
-
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">Django Repository</a>
@@ -32,90 +34,40 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url "post_list" %}">Home</a></li>
             <li><a href="{% url "python" %}" class="top-menu">Python</a></li>
-            <li><a href="#">Djano</a></li>
+            <li><a href="#">Django</a></li>
             <li><a href="#">Git & GitHub</a></li>
-            <li><a href="#">Daily life</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="{% url 'thumbnail_list' %}">Daily life</a></li>
+            {% endif %}
             <li><a href="#">Contact</a></li>
             <li>
-                <div class="bs-example">
-
-                        <button type="button" class="btn btn-default btn-sm" data-target="#signup" data-toggle="modal">Sign up</button>
-                        <button type="button" class="btn btn-default btn-sm" data-target="#login" data-toggle="modal">Log in</button>
-
-                </div>
+                    {% if user.is_authenticated %}
+                    <div class="bs-example">
+                         <a style="color:white">Welcome, {{ user.username }}. Thanks for logging in.</a>
+                         <a href="{% url 'logout' %}" type="button" class="btn btn-default btn-sm">Log out</a>
+                    </div>
+                    {% else %}
+                    <div class="bs-example">
+                         <a href="{% url 'signup' %}" type="button" class="btn btn-default btn-sm">Sign up</a>
+                         <a href="{% url 'login' %}" type="button" class="btn btn-default btn-sm">Log in</a>
+                    </div>
+                    {% endif %}
             </li>
-
           </ul>
         </div>
-
       </div>
     </nav>
-    <div class="modal fade" id="signup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Sign up</h4>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label class="control-label">User Name:</label>
-                <input type="text" class="form-control">
-              </div>
-              <div class="form-group">
-                <label class="control-label">Password:</label>
-                  <input type="text" class="form-control">
-              </div>
-              <div class="form-group">
-                <label class="control-label">Re-Enter Password:</label>
-                  <input type="text" class="form-control">
-              </div>
-              <div class="form-group">
-                <label class="control-label">Email:</label>
-                  <input type="text" class="form-control">
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary">Sign Up</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Log in</h4>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label class="control-label">User Name:</label>
-                <input type="text" class="form-control">
-              </div>
-              <div class="form-group">
-                <label class="control-label">Password:</label>
-                  <input type="text" class="form-control">
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary">Login</button>
-          </div>
-        </div>
-      </div>
-    </div>
 </div>
 
 
 <div class="container">
-
+            <!--<form action="" method="post">{% csrf_token %}-->
+               <!--{{ signup_form.as_p }}-->
+                <!--<div class="modal-footer">-->
+                    <!--<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>-->
+                    <!--<button type="submit" class="btn btn-primary">Sign Up</button>-->
+                <!--</div>-->
+            <!--</form>-->
   <div class="jumbotron">
     <h1>Welcome to My Django Website!</h1>
     <p>This page is for self-learning and practising. It grows as I add more and more components from Python, Djano as well as Git!</p>
@@ -131,10 +83,8 @@
        </div>
    </div>
   <div class="row">
-
       {% block content %}
       {%endblock%}
-
   </div>
 
 
