--- a/mysite/blog/templates/blog/python.html
+++ b/mysite/blog/templates/blog/python.html
@@ -10,7 +10,7 @@
         <div class="container-float">
             <h2>System Environment Setting</h2>
             <p>One thing to watch out for: on the second screen of the installation wizard, marked "Customize", make sure you scroll down and choose the "Add python.exe to the Path" option, as shown here:</p>
-            <img src="{% static 'img/pythonEnv.png' %}" class="img-thumbnail" height="40%" width="40%">
+            <img src="{% static 'img/pythonEnv.png' %}" class="img-responsive">
             <h2>OS X</h2>
             <p>Verify the installation was successful by opening the Terminal application and running the python3 command:</p>
             <code>$ python3 --version<br/>Python 3.4.3</code>
