--- a/mysite/blog/templates/blog/github.html
+++ b/mysite/blog/templates/blog/github.html
@@ -7,7 +7,7 @@
                 <h5>MacOS</h5>
                 Download Git from  <a href="https://git-scm.com">https://git-scm.com</a> and just follow the instructions.<br>
             </div>
-        < class="container-float">
+        <div class="container-float">
             <h2>Starting Git repository</h2>
              <code>$ git init</code><br>
              <code> Initialized empty Git repository in ~/SitePractise/.git/</code><br>
