--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
-	<script src="{% static 'js/jquery.scrollTo.min.js' %}"></script>
 	<script src="{% static 'js/bootstrap.js' %}"></script>
-    <script src="{% static 'js/jQuery.loadScroll.js' %}"></script>
+    <script src="{% static 'js/morphext.min.js' %}"></script>
 	<script src="{% static 'js/myjs.js' %}"></script>
-
+    <link rel="stylesheet" type="text/css" href="{% static 'css/morphext.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
 
 
-	<title>Welcome to My P-D-G setup guide</title>
+	<title>Welcome to My PDG setup guide</title>
+
+
 </head>
 
 <body>
@@ -22,7 +24,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Django Repository</a>
+          <a class="navbar-brand" href="#">PDG Repository</a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -32,14 +34,14 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url "post_list" %}">Home</a></li>
+            <li class="active"><a href="{% url "main_page" %}">Home</a></li>
+            {% if user.is_authenticated %}
             <li><a href="{% url "python" %}" class="top-menu">Python</a></li>
             <li><a href="{% url "django" %}">Django</a></li>
             <li><a href="{% url "github" %}">Git & GitHub</a></li>
-            {% if user.is_authenticated %}
             <li><a href="{% url 'thumbnail_list' %}">Daily life</a></li>
-            {% endif %}
             <li><a href="#">Contact</a></li>
+            {% endif %}
             <li>
                     {% if user.is_authenticated %}
                     <div class="bs-example">
@@ -60,6 +62,25 @@
 </div>
 
 
+
+  <div class="jumbotron container-fluid">
+      <br>
+      <br>
+      <h1 class ="depth pull-right" style="color:white">Tech-Hoker <span id="js-rotating" style="color:white">Python, Django,Git</span> Plan</h1>
+      <div class="col-md-5 col-md-offset-7">
+      <h4 style="color:white">Here is the place for you and me to gain knowledge. It grows as I add more and more components</h4>
+      <a href="#" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-search"></span> Search</a>
+      </div>
+
+
+
+
+
+  </div>
+
+
+
+
 <div class="container">
             <!--<form action="" method="post">{% csrf_token %}-->
                <!--{{ signup_form.as_p }}-->
@@ -68,11 +89,7 @@
                     <!--<button type="submit" class="btn btn-primary">Sign Up</button>-->
                 <!--</div>-->
             <!--</form>-->
-  <div class="jumbotron">
-    <h1>Welcome to My Django Website!</h1>
-    <p>This page is for self-learning and practising. It grows as I add more and more components from Python, Djano as well as Git!</p>
-    <a href="#" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-search"></span> Search</a>
-  </div>
+
    <div class="page-header" >
        <div class = "row">
            <div class="col-md-2 col-md-offset-10">
