main page ready and CSS modify

--- a/mysite/blog/templates/blog/github.html
+++ b/mysite/blog/templates/blog/github.html
@@ -63,7 +63,7 @@
             <br>
             <p>Your code is now on GitHub. Go and check it out! :)</p>
             <h3 class="text-center">Git Workflow</h3><br>
-            <img src="{% static 'img/github3.png' %}" class="img-responsive">
+            <img src="{% static 'img/github3.png' %}" class="img-responsive section_img text-center">
             <br>
             <div>
                 <ol>
