--- a/mysite/blog/static/css/custom.css
+++ b/mysite/blog/static/css/custom.css
@@ -1,53 +1,90 @@
+/*Overflow-x specifies whether or not to clip(scroll) to the left/right edges of the content.*/
+html, body {
+  width: auto !important;
+  overflow-x: hidden !important;
+}
+
+
 .nav-placeholder{
     position: relative;
-    min-height: 50px;
+    min-height: 0em;
+    margin:0;
+    padding-left:0;
+    padding-right:0
+}
+
+/*iphone 5 media query*/
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px){
+.bannerTitle  {
+    position:relative;
+    color:white;
+    }
+}
+
+/*laptop media query*/
+@media only screen and (min-width:600px){
+.bannerTitle  {
+    position:relative;
+    color:white;
+    top:5em;
+    }
+}
+
+.main_title {
+    font-size: 3em;
+    margin: 0 0 0.5em 0
 }
 
 .footer{
-    margin-top:10px;
-    bottom:0px;
-    height:250px;
+    margin-top:5em;
+    padding:3em;
+    bottom:0em;
+    height:auto;
     background-color:#eee;
     width:100%;
     left:0
 }
+
+
+.jumbotron {
+position:relative;
+background: #000 url("../img/index_pic.jpg") center center;
+width:100%;
+height:60%;
+background-size:cover;
+overflow:hidden;
+}
+
 
 .muted{
     color:#999999;
     margin:20px
 }
 
-.social-media {
-    margin:10px
-}
-
-.fieldWrapper {
-    margin: auto;
-    width: 30%;
-    padding: 10px;
-
-}
-
-.c-wrapper{
-    margin:10 0 10 0;
-    border:1px solid rgb(221, 221, 221);
-    border-left-color: #1b809e;
-    border-left-width: 10px;
-    padding-left:5%;
-    border-radius: 3px;
-}
-
 .bs-example .btn {
     margin:10px
 }
 
-.jumbotron {
-background-image: url("../img/index_pic.jpg");
-background-size: 100% 100%;
-background-repeat:no-repeat;
+/* img css for different section */
+
+/*iphone 5 media query*/
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px){
+.section_img  {
+       height:280px;
+       width:280px;
+    }
 }
 
-h1 {
-    text-shadow: 4px 1px 1px rgba(150, 150, 150, 1);
+/*laptop media query*/
+@media only screen and (min-width:600px){
+.section_img  {
+       height:300px;
+       width:350px;
+       margin:0 auto;
+    }
 }
-
+}
