--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -9,22 +9,24 @@
 	<script src="{% static 'js/myjs.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/morphext.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.icon-large.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
 
 
-	<title>Welcome to My PDG setup guide</title>
+	<title>Welcome to Pygo Repository</title>
 
 
 </head>
 
 <body>
 
+
 <div class="nav-placeholder">
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">PDG Repository</a>
+          <a class="navbar-brand" href="#">Pygo Repository</a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -39,7 +41,7 @@
             <li><a href="{% url "python" %}" class="top-menu">Python</a></li>
             <li><a href="{% url "django" %}">Django</a></li>
             <li><a href="{% url "github" %}">Git & GitHub</a></li>
-            <li><a href="{% url 'thumbnail_list' %}">Daily life</a></li>
+            <li><a href="{% url 'thumbnail_list' %}">Daily Life</a></li>
             <li><a href="#">Contact</a></li>
             {% endif %}
             <li>
@@ -61,76 +63,100 @@
     </nav>
 </div>
 
-
-
-  <div class="jumbotron container-fluid">
-      <br>
-      <br>
-      <h1 class ="depth pull-right" style="color:white">Tech-Hoker <span id="js-rotating" style="color:white">Python, Django,Git</span> Plan</h1>
-      <div class="col-md-5 col-md-offset-7">
-      <h4 style="color:white">Here is the place for you and me to gain knowledge. It grows as I add more and more components</h4>
-      <a href="#" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-search"></span> Search</a>
+<div class="jumbotron">
+  <div class = "row bannerTitle">
+      <div class="col-md-8 col-md-offset-4">
+          <div class = "container">
+            <h1 class ="pull-right" >Pygo <span id="js-rotating">Python,Django,Git,Jquery</span> Repository</h1>
+          </div>
+          <div class="col-md-9 col-md-offset-3">
+            <h5>Here is the place for you and me to gain knowledge. It grows as I add more and more components</h5>
+            <a href="#" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-search"></span> Search</a>
+          </div>
       </div>
-
-
-
-
-
   </div>
-
-
+</div>
 
 
 <div class="container">
-            <!--<form action="" method="post">{% csrf_token %}-->
-               <!--{{ signup_form.as_p }}-->
-                <!--<div class="modal-footer">-->
-                    <!--<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>-->
-                    <!--<button type="submit" class="btn btn-primary">Sign Up</button>-->
-                <!--</div>-->
-            <!--</form>-->
 
-   <div class="page-header" >
-       <div class = "row">
-           <div class="col-md-2 col-md-offset-10">
-            {% if user.is_authenticated %}
-            <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span><i>Add new post</i></a>
-            {% endif %}
-           </div>
-       </div>
-   </div>
+
+
   <div class="row">
       {% block content %}
       {%endblock%}
   </div>
 
-
-
+  <div class="row">
+      <br>
+      <br>
+      <div class="col-md-2 col-md-offset-11">
+          <a href="#"><span class="glyphicon glyphicon-share-alt"></span>Back to top</a>
+      </div>
+  </div>
 </div>
+
+
+
 <div class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-md-5 muted">
-                Django Repository is created by Jervis lam. <b>Credited to DjangoGirls</b>.<br/>
-                <span class="glyphicon glyphicon-envelope"></span>&nbsp<i>Email: weijielin.J@gmail.com</i>
+
+            <div class="col-md-4">
+                <div>© Django Repository is created by Jervis lam for self learning and practice. Sign Up today for having more information!</div>
+                <strong>Credited to DjangoGirls</strong>
             </div>
-            <div class = social-media>
-                    <div class="col-md-2">
-                        <a class="btn btn-block btn-social facebook">
-                            <i class="fa fa-facebook"></i>  Sign in with Facebook
-                        </a>
-                    </div>
-                    <div class="col-md-2">
-                        <a class="btn btn-block btn-social github">
-                            <i class="fa fa-github"></i>  Sign in with GitHub
-                        </a>
-                    </div>
-                    <div class="col-md-2">
-                        <a class="btn btn-block btn-social linkedin">
-                            <i class="fa fa-linkedin"></i>  Sign in with Linkedin
-                        </a>
-                    </div>
+
+
+            <div class="col-md-4">
+                <address>
+                  <strong>Wentworth Institute of Technology</strong><br>
+                  550 Huntington Avenue<br>
+                  Boston, MA 02115<br>
+                  <abbr title="Phone">P:</abbr> 617-989-4590
+                </address>
+                <address>
+                  <strong>Email</strong><br>
+                  <a href="mailto:#">weijielin.J@gmail.com</a>
+                </address>
             </div>
+
+             <div class="col-md-4">
+                 <div class="row">
+                     <a href="https://www.facebook.com/jervis.lin.1">
+                         <div class="col-md-1">
+                            <i class="icon-large icon-facebook" aria-hidden="true"></i>
+                         </div>
+                         <div class="col-md-6">
+                             <strong style="display:inline-block">Sign in with Facebook</strong>
+                         </div>
+                     </a>
+                 </div>
+
+                 <div class="row">
+                     <a href="https://www.linkedin.com/pub/weijie-lin/a8/27b/61b">
+                         <div class="col-md-1">
+                             <i class="icon-large icon-linked-in" aria-hidden="true"></i>
+                         </div>
+                         <div class="col-md-6">
+                            <strong style="display:inline-block">Sign in with Linkedin</strong>
+                         </div>
+                     </a>
+                 </div>
+
+
+                 <div class="row">
+                     <a href="#">
+                        <div class="col-md-1">
+                            <i class="icon-large icon-github" aria-hidden="true"></i>
+                        </div>
+                         <div class="col-md-6">
+                            <strong style="display:inline-block">Sign in with GitHub</strong>
+                         </div>
+                     </a>
+                 </div>
+
+             </div>
         </div>
     </div>
 </div>
