--- a/mysite/blog/templates/blog/login.html
+++ b/mysite/blog/templates/blog/login.html
@@ -1,19 +1,21 @@
 {% extends "blog/base.html" %}
-
+{% load staticfiles %}
 {% block content %}
 
   {% if form.errors %}
     <p class="error">Sorry, that's not a valid username or password</p>
   {% endif %}
 
-  <form action="" method="post">{% csrf_token %}
-    <label for="username">User name:</label>
-    <input type="text" name="un" value="" id="username">
-    <label for="password">Password:</label>
-    <input type="password" name="ps" value="" id="password">
+  <form action="" method="post" class="form-inline">{% csrf_token %}
+    <div class="form-group">
+      <label for="username">User name:</label>
+      <input type="text" name="un" value="" id="username" class="form-control">
+      <label for="password">Password:</label>
+      <input type="password" name="ps" value="" id="password" class="form-control">
 
-    <input type="submit" value="login" />
-    <input type="hidden" name="next" value="{{ next|escape }}" />
+      <input type="submit" value="Log in" class="btn btn-default"/>
+      <!--<input type="hidden" name="next" value="{{ next|escape }}" />-->
+    </div>
   </form>
 
 {% endblock %}
