--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,6 +1,15 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
+   <div class="page-header" >
+       <div class = "row">
+           <div class="col-md-2 col-md-offset-10">
+            {% if user.is_authenticated %}
+            <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span><i>Add new post</i></a>
+            {% endif %}
+           </div>
+       </div>
+   </div>
 
     <table class="table table-striped">
       <h3 class = "text-muted">Recent Posts Exhibition</h3>
@@ -19,7 +28,7 @@
         <tr>
           <th>Title</th>
           <th>Type</th>
-          <th>Content</th>
+
           <th>Date</th>
         </tr>
       </thead>
@@ -28,7 +37,6 @@
         <tr>
           <td list-group-item-success><a href="{% url "post_detail" pk=post.pk %}">{{ post.title }}</a></td>
           <td>{{post.type}}</td>
-          <td>{{ post.text|linebreaks }}</td>
           <td>{{ post.publish_date }}</td>
         </tr>
       {% endfor %}
