--- a/mysite/blog/templates/blog/signup.html
+++ b/mysite/blog/templates/blog/signup.html
@@ -1,11 +1,33 @@
 {% extends "blog/base.html" %}
-
+{% load widget_tweaks %}
 {% block content %}
-<form action="" method="post">{% csrf_token %}
-    {{ signup_form.as_p }}
-    <div class="modal-footer">
+<form class="form-horizontal">{% csrf_token %}
+  <div class="form-group">
+        <label class="col-sm-2 control-label">{{ signup_form.username.label_tag}}</label>
+    <div class="col-sm-5">
+        {{signup_form.username|add_class:"form-control"|attr:"placeholder:Username"}}
+    </div>
+    <div class="col-sm-5">{{ signup_form.username.help_text }}</div>
+  </div>
+  <div class="form-group">
+    <label for="inputPassword1" class="col-sm-2 control-label">{{ signup_form.password1.label_tag}}</label>
+    <div class="col-sm-5">
+      {{signup_form.password1|add_class:"form-control"|attr:"placeholder:Password"}}
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputPassword2" class="col-sm-2 control-label">{{ signup_form.password2.label_tag}}</label>
+    <div class="col-sm-5">
+      {{signup_form.password2|add_class:"form-control"|attr:"placeholder:Password Confirmation"}}
+    </div>
+    <div class="col-sm-5">{{ signup_form.password2.help_text }}</div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
         <button type="button" class="btn btn-default">Cancel</button>
         <button type="submit" class="btn btn-primary">Sign Up</button>
     </div>
+  </div>
 </form>
+
 {% endblock %}
