--- a/mysite/blog/templates/blog/post_edit.html
+++ b/mysite/blog/templates/blog/post_edit.html
@@ -11,6 +11,11 @@
             </div>
 
             <div>
+                {{ form.type.label_tag}} {{form.type|add_class:"form-control" }}
+            </div>
+
+
+            <div>
                 {{ form.text.label_tag}} {{form.text|add_class:"form-control" }}
             </div>
 
