--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -38,6 +38,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url "main_page" %}">Home</a></li>
             {% if user.is_authenticated %}
+            <li><a href="{% url "post_list" %}" class="top-menu">Posts</a></li>
             <li><a href="{% url "python" %}" class="top-menu">Python</a></li>
             <li><a href="{% url "django" %}">Django</a></li>
             <li><a href="{% url "github" %}">Git & GitHub</a></li>
