--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -20,8 +20,7 @@
                 </div>
                 {% endif %}
             </div>
-
-            <p class="lead"> {{ post.text|linebreaks }}</p>
+            <p class="text-justify"> {{ post.text|linebreaks }}</p>
         </div>
     </div>
 {% endblock %}
