--- a/mysite/blog/templates/blog/signup.html
+++ b/mysite/blog/templates/blog/signup.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 {% load widget_tweaks %}
 {% block content %}
-<form class="form-horizontal">{% csrf_token %}
+<form class="form-horizontal" method="post">{% csrf_token %}
   <div class="form-group">
         <label class="col-sm-2 control-label">{{ signup_form.username.label_tag}}</label>
     <div class="col-sm-5">
