--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -1,16 +1,100 @@
 {% load staticfiles %}
 <html>
+
+<!--html head, meta, title and script-->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
 	<script src="{% static 'js/bootstrap.js' %}"></script>
     <script src="{% static 'js/morphext.min.js' %}"></script>
+    <script src="{% static 'js/jquery-ui.min.js' %}"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    <!--<script>-->
+      <!--(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
+      <!--(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
+      <!--m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
+      <!--})(window,document,'script','//www.google-analytics.com/analytics.js','ga');-->
+
+      <!--ga('create', 'UA-73547764-1', 'auto');-->
+      <!--ga('send', 'pageview');-->
+    <!--</script>-->
+
+    <!--<script>-->
+        <!--(function(w,d,s,g,js,fs){-->
+          <!--g=w.gapi||(w.gapi={});g.analytics={q:[],ready:function(f){this.q.push(f);}};-->
+          <!--js=d.createElement(s);fs=d.getElementsByTagName(s)[0];-->
+          <!--js.src='https://apis.google.com/js/platform.js';-->
+          <!--fs.parentNode.insertBefore(js,fs);js.onload=function(){g.load('analytics');};-->
+        <!--}(window,document,'script'));-->
+    <!--</script>-->
+    <!--<script>-->
+
+        <!--gapi.analytics.ready(function() {-->
+
+          <!--/**-->
+           <!--* Authorize the user immediately if the user has already granted access.-->
+           <!--* If no access has been created, render an authorize button inside the-->
+           <!--* element with the ID "embed-api-auth-container".-->
+           <!--*/-->
+          <!--gapi.analytics.auth.authorize({-->
+            <!--container: 'embed-api-auth-container',-->
+            <!--clientid: '966708397792-aksnso6ff0jr7l0g7uudpgh9a6ad7p3t.apps.googleusercontent.com'-->
+          <!--});-->
+
+
+          <!--/**-->
+           <!--* Create a new ViewSelector instance to be rendered inside of an-->
+           <!--* element with the id "view-selector-container".-->
+           <!--*/-->
+          <!--var viewSelector = new gapi.analytics.ViewSelector({-->
+            <!--container: 'view-selector-container'-->
+          <!--});-->
+
+          <!--// Render the view selector to the page.-->
+          <!--viewSelector.execute();-->
+
+
+          <!--/**-->
+           <!--* Create a new DataChart instance with the given query parameters-->
+           <!--* and Google chart options. It will be rendered inside an element-->
+           <!--* with the id "chart-container".-->
+           <!--*/-->
+          <!--var dataChart = new gapi.analytics.googleCharts.DataChart({-->
+            <!--query: {-->
+              <!--metrics: 'ga:sessions',-->
+              <!--dimensions: 'ga:date',-->
+              <!--'start-date': '30daysAgo',-->
+              <!--'end-date': 'yesterday'-->
+            <!--},-->
+            <!--chart: {-->
+              <!--container: 'chart-container',-->
+              <!--type: 'LINE',-->
+              <!--options: {-->
+                <!--width: '100%'-->
+              <!--}-->
+            <!--}-->
+          <!--});-->
+
+
+          <!--/**-->
+           <!--* Render the dataChart on the page whenever a new view is selected.-->
+           <!--*/-->
+          <!--viewSelector.on('change', function(ids) {-->
+            <!--dataChart.set({query: {ids: ids}}).execute();-->
+          <!--});-->
+
+        <!--});-->
+    <!--</script>-->
 	<script src="{% static 'js/myjs.js' %}"></script>
+
     <link rel="stylesheet" type="text/css" href="{% static 'css/morphext.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/jquery-ui.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.icon-large.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/railscasts.min.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
 
 
@@ -21,7 +105,7 @@
 
 <body>
 
-
+<!--navigation bar-->
 <div class="nav-placeholder">
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
@@ -64,24 +148,24 @@
     </nav>
 </div>
 
+<!--jumbotron image and text-->
 <div class="jumbotron">
   <div class = "row bannerTitle">
       <div class="col-md-8 col-md-offset-4">
           <div class = "container">
             <h1 class ="pull-right" >Pygo <span id="js-rotating">Python,Django,Git,Jquery</span> Repository</h1>
           </div>
-          <div class="col-md-9 col-md-offset-3">
-            <h5>Here is the place for you and me to gain knowledge. It grows as I add more and more components</h5>
-            <a href="#" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-search"></span> Search</a>
-          </div>
       </div>
   </div>
 </div>
 
-
+<!--main body container-->
 <div class="container">
 
-
+<!--<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>-->
+<!--<div id="embed-api-auth-container"></div>-->
+<!--<div id="chart-container"></div>-->
+<!--<div id="view-selector-container"></div>-->
 
   <div class="row">
       {% block content %}
@@ -97,8 +181,7 @@
   </div>
 </div>
 
-
-
+<!--footer-->
 <div class="footer">
     <div class="container">
         <div class="row">
@@ -123,24 +206,25 @@
             </div>
 
              <div class="col-md-4">
+
                  <div class="row">
                      <a href="https://www.facebook.com/jervis.lin.1">
-                         <div class="col-md-1">
+                         <div class="col-md-1 col-xs-1">
                             <i class="icon-large icon-facebook" aria-hidden="true"></i>
                          </div>
-                         <div class="col-md-6">
-                             <strong style="display:inline-block">Sign in with Facebook</strong>
+                         <div class="col-md-7 col-xs-10">
+                             <strong style="display:inline-block">Sign in Facebook</strong>
                          </div>
                      </a>
                  </div>
 
                  <div class="row">
                      <a href="https://www.linkedin.com/pub/weijie-lin/a8/27b/61b">
-                         <div class="col-md-1">
+                         <div class="col-md-1 col-xs-1">
                              <i class="icon-large icon-linked-in" aria-hidden="true"></i>
                          </div>
-                         <div class="col-md-6">
-                            <strong style="display:inline-block">Sign in with Linkedin</strong>
+                         <div class="col-md-7 col-xs-10">
+                            <strong style="display:inline-block">Sign in Linkedin</strong>
                          </div>
                      </a>
                  </div>
@@ -148,11 +232,11 @@
 
                  <div class="row">
                      <a href="#">
-                        <div class="col-md-1">
+                        <div class="col-md-1 col-xs-1">
                             <i class="icon-large icon-github" aria-hidden="true"></i>
                         </div>
-                         <div class="col-md-6">
-                            <strong style="display:inline-block">Sign in with GitHub</strong>
+                         <div class="col-md-7 col-xs-10">
+                            <strong style="display:inline-block">Sign in GitHub</strong>
                          </div>
                      </a>
                  </div>
@@ -163,5 +247,6 @@
 </div>
 
 </body>
+
 </html>
 
