--- a/mysite/blog/templates/blog/index.html
+++ b/mysite/blog/templates/blog/index.html
@@ -1,18 +1,19 @@
 {% extends "blog/base.html" %}
 {% load staticfiles %}
 {% block content %}
+<!--row for main title-->
 <div class="row">
     <div class="container">
-        <h4 class="text-center"><small> More flexible, convenient, and scalable</small></h4>
         <div class="text-center main_title">Python + Django + Bootstrap </div>
-
+        <h4 class="text-center" style="font-family:monospace"><small> More flexible, convenient, and scalable</small></h4>
     </div>
 </div>
 <br>
+<!--row for python and django title-->
 <div class="row">
      <div class="container">
           <div class="col-md-6">
-            <img class = "img-responsive" src="{% static 'img/index_code.jpg' %}" alt="...">
+            <img class = "img-responsive" src="{% static 'img/index_code.jpg' %}" alt="Code Sample" style="padding:2em">
           </div>
 
           <div class="col-md-6">
@@ -33,95 +34,78 @@
 
      </div>
 </div>
-
-
-
-<br>
-<br>
-
-
+<!--row for bootstrap title-->
 <div class="row">
      <div class="container">
-         <div class="col-md-6" style="padding-top:5em">
+         <div class="col-md-6">
 
             <h3>Bootstrap <small>popular HTML, CSS, and JS framework</small> </h3>
-             <p>Bootstrap provides you the short cut for developing responsive, mobile friendly web app. It easily scales your web application with CSS media
-                 queries. More over, it works on different kinds of tablets and it fully supports varied cell phone platforms such as iOS, Android, Windows Phone, BlackBerry,
-                 etc.With Bootstrap, you can apply dozens of HTML and CSS components as well as javascript plugin to your project to make it for all size and all shapes.
+             <p>Bootstrap is a very powerful framework for HTML, CSS and JS in which provides you the short cut for developing responsive, mobile friendly web app.
+                 It easily scales your web application with CSS media queries. No matter how you shrink your web pages, it will keep your display and show what it's
+                 supposed to exhibit. More over, it works on different kinds of tablets and it fully supports varied cell phone platforms such as iOS, Android, Windows
+                 Phone, BlackBerry,etc.With Bootstrap, you can apply dozens of HTML and CSS components as well as javascript plugin to your project to make it for all size and all shapes.
              </p>
          </div>
 
          <div class="col-md-6">
-            <img class = "img-responsive" src="{% static 'img/index_phones.jpg' %}" alt="...">
+            <img class = "img-responsive" src="{% static 'img/index_phones.jpg' %}" alt="..." style="padding:2em">
          </div>
 
 
      </div>
 </div>
-
-
-
-
-
 <br>
-<br>
-
-
-
-
-
-
-
-
-
-
+<!--row for others-->
 <div class="row">
 
-     <div class="col-xs-6 col-md-3">
-        <a href="#" class="thumbnail">
-            <img src="{% static 'img/icon_1.jpg' %}" alt="...">
-        </a>
-
-        <div class="caption">
+     <div class="col-sm-6 col-md-3">
+         <div class="index_pic">
+            <a href="#" class="thumbnail">
+                <img src="{% static 'img/icon_1.jpg' %}" alt="...">
+            </a>
+         </div>
+         <div class="caption">
             <h3 class="text-center">Information</h3>
             <p class="text-justify">To share, to learn, to gain up to date knowledge from those ones who have creative thoughts. It's about the time to boost yourself into another level and develop new skills.</p>
-        </div>
-    </div>
-    <div class="col-xs-6 col-md-3">
-        <a href="#" class="thumbnail">
-            <img src="{% static 'img/icon_2.jpg' %}" alt="...">
-        </a>
+         </div>
+     </div>
+     <div class="col-sm-6 col-md-3">
+         <div class="index_pic">
+            <a href="#" class="thumbnail">
+                <img src="{% static 'img/icon_2.jpg' %}" alt="...">
+            </a>
+         </div>
+         <div class="caption">
+             <h3 class="text-center">Technology</h3>
+             <p>Improve your technical skills from basic to enhancement by following the high-tech trend out there. Finding anything you need from here for yourself to keep you pace in this fast changing world.</p>
+         </div>
+     </div>
 
-        <div class="caption">
-            <h3 class="text-center">Technology</h3>
-            <p class="text-justify">Improve your technical skills from basic to enhancement by following the high-tech trend out there. Finding anything you need from here for yourself to keep you pace in this fast changing world.</p>
-        </div>
-    </div>
-
-    <div class="col-xs-6 col-md-3">
-        <a href="#" class="thumbnail">
-            <img src="{% static 'img/icon_3.jpg' %}" alt="...">
-        </a>
-
-        <div class="caption">
+     <div class="col-sm-6 col-md-3">
+         <div class="index_pic">
+            <a href="#" class="thumbnail">
+                <img src="{% static 'img/icon_3.jpg' %}" alt="...">
+            </a>
+         </div>
+         <div class="caption">
             <h3 class="text-center">Research</h3>
-            <p class="text-justify">Search the web for all you needs and relevant information for free. You can systematically investigate and study the materials and sources here in order to establish new facts.</p>
-        </div>
-    </div>
+            <p>Search the web for all you needs and relevant information for free. You can systematically investigate and study the materials and sources here in order to establish new facts.</p>
+         </div>
+     </div>
 
-    <div class="col-xs-6 col-md-3">
-        <a href="#" class="thumbnail">
-            <img src="{% static 'img/icon_4.jpg' %}" alt="...">
-        </a>
+     <div class="col-sm-6 col-md-3">
+         <div class="index_pic">
+             <a href="#" class="thumbnail">
+                 <img src="{% static 'img/icon_4.jpg' %}" alt="...">
+             </a>
+         </div>
 
-        <div class="caption">
-            <h3 class="text-center">Connectivity</h3>
-            <p class="text-justify">We highly engage to interact with social network. Connection here is not only for communication. It is more for expanding the connectivity with other people and knowledge growth.</p>
-        </div>
-    </div>
+         <div class="caption">
+             <h3 class="text-center">Connectivity</h3>
+             <p>We highly engage to interact with social network. Connection here is not only for communication. It is more for expanding the connectivity with other people and knowledge growth.</p>
+         </div>
+     </div>
 
 </div>
-
-
 
 {% endblock %}
