--- a/mysite/blog/templates/blog/add_comment_to_post.html
+++ b/mysite/blog/templates/blog/add_comment_to_post.html
@@ -1,6 +1,8 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<div class="banner" data-attr="" data-attr-second="">
+</div>
     <h1>New comment</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
