--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
 	<script src="{% static 'js/bootstrap.js' %}"></script>
-    <script src="{% static 'js/morphext.min.js' %}"></script>
     <script src="{% static 'js/jquery-ui.min.js' %}"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <!--<script>-->
       <!--(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
@@ -88,16 +90,15 @@
         <!--});-->
     <!--</script>-->
 	<script src="{% static 'js/myjs.js' %}"></script>
-
-    <link rel="stylesheet" type="text/css" href="{% static 'css/morphext.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/jquery-ui.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.icon-large.min.css' %}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/railscasts.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/railscasts.min.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
-
-
 	<title>Welcome to Pygo Repository</title>
 
 
@@ -110,138 +111,157 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Pygo Repository</a>
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+          <a class="navbar-brand" href="#" style="color:white;">Pygo Repository</a>
+            <button type="button" class="navbar-toggle collapsed bgh" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url "main_page" %}">Home</a></li>
             {% if user.is_authenticated %}
-            <li><a href="{% url "post_list" %}" class="top-menu">Posts</a></li>
-            <li><a href="{% url "python" %}" class="top-menu">Python</a></li>
-            <li><a href="{% url "django" %}">Django</a></li>
-            <li><a href="{% url "github" %}">Git & GitHub</a></li>
-            <li><a href="{% url 'thumbnail_list' %}">Daily Life</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="{% url 'main_page' %}" class="text-center">Home</a></li>
+            <li><a href="{% url 'post_list' %}" class="text-center">Posts</a></li>
+            <li><a href="{% url 'python' %}" class="text-center">Python</a></li>
+            <li><a href="{% url 'django' %}" class="text-center">Django</a></li>
+            <li><a href="{% url 'github' %}" class="text-center">GitHub</a></li>
+            <li><a href="{% url 'contact' %}" class="text-center">Contact</a></li>
+           </ul>
+           <ul class="nav navbar-nav navbar-center">
             {% endif %}
-            <li>
+                <li>
                     {% if user.is_authenticated %}
-                    <div class="bs-example">
-                         <a style="color:white">Welcome, {{ user.username }}. Thanks for logging in.</a>
-                         <a href="{% url 'logout' %}" type="button" class="btn btn-default btn-sm">Log out</a>
-                    </div>
-                    {% else %}
-                    <div class="bs-example">
-                         <a href="{% url 'signup' %}" type="button" class="btn btn-default btn-sm">Sign up</a>
-                         <a href="{% url 'login' %}" type="button" class="btn btn-default btn-sm">Log in</a>
-                    </div>
-                    {% endif %}
-            </li>
-          </ul>
+                    <a style="color:white" class="text-center">Welcome back, {{ user.username }}.</a>
+                </li>
+                <li class="text-center">
+                    <div class="bs-example"><a href="{% url 'logout' %}" type="button" class="btn btn-info btn-md">Log out</a></div>
+                </li>
+                {% else %}
+                <div class="bs-example">
+                     <a href="{% url 'signup' %}" type="button" class="btn btn-info btn-md">Sign up</a>
+                     <a href="{% url 'login' %}" type="button" class="btn btn-info btn-md">Log in</a>
+                </div>
+                {% endif %}
+           </ul>
         </div>
       </div>
     </nav>
 </div>
 
-<!--jumbotron image and text-->
-<div class="jumbotron">
-  <div class = "row bannerTitle">
-      <div class="col-md-8 col-md-offset-4">
-          <div class = "container">
-            <h1 class ="pull-right" >Pygo <span id="js-rotating">Python,Django,Git,Jquery</span> Repository</h1>
-          </div>
-      </div>
-  </div>
-</div>
+<!--&lt;!&ndash;jumbotron image and text&ndash;&gt;-->
+<!--<div class="jumbotron">-->
+
+<!--</div>-->
+
+<!--<div class = "bannerTitle">-->
+    <!--<h1 class ="text-center" >Tech Blog</h1><hr class="m-y-3">-->
+    <!--<h5 class="text-center">A guy comes from planet of tech nerd left his note here</h5>-->
+    <!--<h5 class="text-center">It notes down a load of secrets about Python, Django, and JQuery</h5>-->
+    <!--<a href="#" class="btn-know-more" style="text-decoration: none;">Know More</a>-->
+<!--</div>-->
+
+
+
+
 
 <!--main body container-->
-<div class="container">
-
+<div class="c-wrapper">
 <!--<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>-->
 <!--<div id="embed-api-auth-container"></div>-->
 <!--<div id="chart-container"></div>-->
 <!--<div id="view-selector-container"></div>-->
 
-  <div class="row">
-      {% block content %}
-      {%endblock%}
-  </div>
 
-  <div class="row">
-      <br>
-      <br>
-      <div class="col-md-2 col-md-offset-11">
-          <a href="#"><span class="glyphicon glyphicon-share-alt"></span>Back to top</a>
-      </div>
-  </div>
+{% block content %}
+{% endblock %}
+
 </div>
+
 
 <!--footer-->
 <div class="footer">
     <div class="container">
         <div class="row">
+            <div class="col-md-3 text-center">
+                <div class="col-md-12">
+                    <h4>About</h4>
+                </div>
+                  <div class="col-md-12">
+                    <div>Home</div>
+                </div>
+                  <div class="col-md-12">
+                    <div>Post</div>
+                </div>
+                  <div class="col-md-12">
+                    <div>Contact Me</div>
+                </div>
 
-            <div class="col-md-4">
-                <div>© Django Repository is created by Jervis lam for self learning and practice. Sign Up today for having more information!</div>
-                <strong>Credited to DjangoGirls</strong>
             </div>
 
 
-            <div class="col-md-4">
+            <div class="col-md-3 text-center">
+                <div class="col-md-12">
+                    <h4>Basic Guide</h4>
+                </div>
+                  <div class="col-md-12">
+                    <div>Python</div>
+                </div>
+                  <div class="col-md-12">
+                    <div>Django</div>
+                </div>
+                  <div class="col-md-12">
+                    <div>jQuery</div>
+                </div>
+
+            </div>
+
+
+            <div class="col-md-3 text-center">
+                <div class="col-md-12">
+                    <h4>Education</h4>
+                </div>
+                <div class="col-md-12">
                 <address>
                   <strong>Wentworth Institute of Technology</strong><br>
                   550 Huntington Avenue<br>
                   Boston, MA 02115<br>
                   <abbr title="Phone">P:</abbr> 617-989-4590
                 </address>
-                <address>
-                  <strong>Email</strong><br>
-                  <a href="mailto:#">weijielin.J@gmail.com</a>
-                </address>
+                </div>
             </div>
 
-             <div class="col-md-4">
-
-                 <div class="row">
+             <div class="col-md-3 ">
+                 <div class="col-md-12 text-center">
+                    <h4>Social Media</h4>
+                 </div>
+                 <div class="row footer_social">
                      <a href="https://www.facebook.com/jervis.lin.1">
-                         <div class="col-md-1 col-xs-1">
-                            <i class="icon-large icon-facebook" aria-hidden="true"></i>
-                         </div>
-                         <div class="col-md-7 col-xs-10">
-                             <strong style="display:inline-block">Sign in Facebook</strong>
+                         <div class="col-md-10 text-center">
+                              <i class="fa fa-facebook"></i><div class="col-md-3 col-md-offset-4 text-center">Facebook</div>
                          </div>
                      </a>
                  </div>
-
-                 <div class="row">
+                 <div class="row footer_social text-center">
                      <a href="https://www.linkedin.com/pub/weijie-lin/a8/27b/61b">
-                         <div class="col-md-1 col-xs-1">
-                             <i class="icon-large icon-linked-in" aria-hidden="true"></i>
-                         </div>
-                         <div class="col-md-7 col-xs-10">
-                            <strong style="display:inline-block">Sign in Linkedin</strong>
+                         <div class="col-md-10 text-center">
+                            <i class="fa fa-linkedin"></i><div class="col-md-3 col-md-offset-4 text-center">Linkedin</div>
                          </div>
                      </a>
                  </div>
-
-
-                 <div class="row">
+                 <div class="row footer_social text-center">
                      <a href="#">
-                        <div class="col-md-1 col-xs-1">
-                            <i class="icon-large icon-github" aria-hidden="true"></i>
-                        </div>
-                         <div class="col-md-7 col-xs-10">
-                            <strong style="display:inline-block">Sign in GitHub</strong>
+                         <div class="col-md-10 text-center">
+                             <i class="fa fa-github"></i><div class="col-md-3 col-md-offset-4 text-center">GitHub</div>
                          </div>
                      </a>
                  </div>
 
              </div>
+        </div>
+
+        <div class="row text-center">
+            <div>© Copyright 2016 Django Repository</div>
         </div>
     </div>
 </div>
