--- a/mysite/blog/templates/blog/github.html
+++ b/mysite/blog/templates/blog/github.html
@@ -1,6 +1,8 @@
 {% extends "blog/base.html" %}
 {% load static %}
 {% block content %}
+<div class="banner" data-attr="" data-attr-second="">
+</div>
 <div class="container" xmlns="http://www.w3.org/1999/html">
         <h1>Git Installation</h1>
             <div class="alert alert-info ">
@@ -13,8 +15,7 @@
              <code> Initialized empty Git repository in ~/SitePractise/.git/</code><br>
              <code> $ git config --global user.name "Your Name"</code><br>
              <code> $ git config --global user.email you@example.com</code><br>
-            <i class="text-success">SitePractise is the folder where your site located</i><br>
-            <br>
+            <div class="text-success">SitePractise is the folder where your site located</div><br>
             <p>Initializing the git repository is something we only need to do once per project (and you won't have to re-enter the username and email again ever).
                Git will track changes to all the files and folders in this directory, but there are some files we want it to ignore. We do this by creating a file called .gitignore in the base directory. Open up your editor and create a new file with the following contents:
             </p>
@@ -37,8 +38,10 @@
             <code>nothing added to commit but untracked files present (use "git add" to track) </code><br>
             <br>
             <p>And finally we save our changes. Go to your console and run these commands:</p>
-            <code>$ git add -A . $ git commit -m "My Django Site app, first commit"  [...]  13 files changed, 200 insertions(+)  create mode 100644 .gitignore  [...]  create mode 100644 mysite/wsgi.py</code><br>
-            <i class="text-success">Locate your site folder</i><br>
+            <code>$ git add -A .</code><br>
+            <code>$ git commit -m "My Django Site app, first commit"</code><br>
+            <code>[...]  13 files changed, 200 insertions(+)  create mode 100644 .gitignore  [...]  create mode 100644 mysite/wsgi.py</code><br>
+            <div class="text-success">Locate your site folder</div><br>
             <h1>Pushing code to GitHub</h1>
             <div class="alert alert-info ">
                 Go to  <a href="http://github.com">GitHub.com</a> and sign up for a new, free user account. (If you already did that in the workshop prep, that is great!)</br>
