--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,11 +1,15 @@
 {% extends "blog/base.html" %}
-
 {% block content %}
+
+<div class="banner" data-attr="" data-attr-second="">
+</div>
+
+<div class="container">
    <div class="page-header" >
        <div class = "row">
            <div class="col-md-2 col-md-offset-10">
             {% if user.is_authenticated %}
-            <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span><i>Add new post</i></a>
+            <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span><span>Add new post</span></a>
             {% endif %}
            </div>
        </div>
@@ -42,7 +46,7 @@
       {% endfor %}
       </tbody>
     </table>
-
+</div>
 {% endblock content %}
 
 
