--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -13,83 +13,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-
-    <!--<script>-->
-      <!--(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
-      <!--(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
-      <!--m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
-      <!--})(window,document,'script','//www.google-analytics.com/analytics.js','ga');-->
-
-      <!--ga('create', 'UA-73547764-1', 'auto');-->
-      <!--ga('send', 'pageview');-->
-    <!--</script>-->
-
-    <!--<script>-->
-        <!--(function(w,d,s,g,js,fs){-->
-          <!--g=w.gapi||(w.gapi={});g.analytics={q:[],ready:function(f){this.q.push(f);}};-->
-          <!--js=d.createElement(s);fs=d.getElementsByTagName(s)[0];-->
-          <!--js.src='https://apis.google.com/js/platform.js';-->
-          <!--fs.parentNode.insertBefore(js,fs);js.onload=function(){g.load('analytics');};-->
-        <!--}(window,document,'script'));-->
-    <!--</script>-->
-    <!--<script>-->
-
-        <!--gapi.analytics.ready(function() {-->
-
-          <!--/**-->
-           <!--* Authorize the user immediately if the user has already granted access.-->
-           <!--* If no access has been created, render an authorize button inside the-->
-           <!--* element with the ID "embed-api-auth-container".-->
-           <!--*/-->
-          <!--gapi.analytics.auth.authorize({-->
-            <!--container: 'embed-api-auth-container',-->
-            <!--clientid: '966708397792-aksnso6ff0jr7l0g7uudpgh9a6ad7p3t.apps.googleusercontent.com'-->
-          <!--});-->
-
-
-          <!--/**-->
-           <!--* Create a new ViewSelector instance to be rendered inside of an-->
-           <!--* element with the id "view-selector-container".-->
-           <!--*/-->
-          <!--var viewSelector = new gapi.analytics.ViewSelector({-->
-            <!--container: 'view-selector-container'-->
-          <!--});-->
-
-          <!--// Render the view selector to the page.-->
-          <!--viewSelector.execute();-->
-
-
-          <!--/**-->
-           <!--* Create a new DataChart instance with the given query parameters-->
-           <!--* and Google chart options. It will be rendered inside an element-->
-           <!--* with the id "chart-container".-->
-           <!--*/-->
-          <!--var dataChart = new gapi.analytics.googleCharts.DataChart({-->
-            <!--query: {-->
-              <!--metrics: 'ga:sessions',-->
-              <!--dimensions: 'ga:date',-->
-              <!--'start-date': '30daysAgo',-->
-              <!--'end-date': 'yesterday'-->
-            <!--},-->
-            <!--chart: {-->
-              <!--container: 'chart-container',-->
-              <!--type: 'LINE',-->
-              <!--options: {-->
-                <!--width: '100%'-->
-              <!--}-->
-            <!--}-->
-          <!--});-->
-
-
-          <!--/**-->
-           <!--* Render the dataChart on the page whenever a new view is selected.-->
-           <!--*/-->
-          <!--viewSelector.on('change', function(ids) {-->
-            <!--dataChart.set({query: {ids: ids}}).execute();-->
-          <!--});-->
-
-        <!--});-->
-    <!--</script>-->
 	<script src="{% static 'js/myjs.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/jquery-ui.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
@@ -112,7 +35,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#" style="color:white;">Pygo Repository</a>
+          <a class="navbar-brand" href="{% url 'main_page' %}" style="color:white;">Pygo Repository</a>
             <button type="button" class="navbar-toggle collapsed bgh" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -149,36 +72,12 @@
       </div>
     </nav>
 </div>
-
-<!--&lt;!&ndash;jumbotron image and text&ndash;&gt;-->
-<!--<div class="jumbotron">-->
-
-<!--</div>-->
-
-<!--<div class = "bannerTitle">-->
-    <!--<h1 class ="text-center" >Tech Blog</h1><hr class="m-y-3">-->
-    <!--<h5 class="text-center">A guy comes from planet of tech nerd left his note here</h5>-->
-    <!--<h5 class="text-center">It notes down a load of secrets about Python, Django, and JQuery</h5>-->
-    <!--<a href="#" class="btn-know-more" style="text-decoration: none;">Know More</a>-->
-<!--</div>-->
-
-
-
-
-
-<!--main body container-->
 <div class="c-wrapper">
-<!--<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>-->
-<!--<div id="embed-api-auth-container"></div>-->
-<!--<div id="chart-container"></div>-->
-<!--<div id="view-selector-container"></div>-->
-
 
 {% block content %}
 {% endblock %}
 
 </div>
-
 
 <!--footer-->
 <div class="footer">
@@ -262,7 +161,7 @@
         </div>
 
         <div class="row text-center">
-            <div>© Copyright 2016 Django Repository</div>
+            <div>Self-Study 2016 Django Repository</div>
         </div>
     </div>
 </div>
